<resources>
    <string name="app_name">Corrupt Free Uganda</string>
    <string name="corruption_menu">Menu</string>
    <string name="title_activity_court_cases">CourtCasesActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="report_corruption">Report Corruption</string>
    <string name="court_case">Court Cases</string>
    <string name="title_activity_on_going_cases">OnGoingCasesActivity</string>
    <string name="title_activity_concluded_cases">ConcludedCasesActivity</string>
    <string name="title_activity_appealed_cases">AppealedCasesActivity</string>
    <string name="report_case">Report Case</string>
    <!--<string name="court_cases">Court Cases</string>-->
    <string name="government_services">Government Services</string>
    <string name="information">Information</string>
    <string name="corrupt_free_uganda">Corrupt Free Uganda</string>
    <string name="ongoing_cases">OnGoing Cases</string>
    <string name="concluded_cases">Concluded Cases</string>
    <string name="appealed_cases">Appealed Cases</string>
    <string name="input_date">Input Date </string>
    <string name="report_details"><u><b>Report Details</b></u></string>
    <string name="personal_information"><u><b>Personal Information</b></u></string>
    <string name="input_time">Input Time</string>
    <string name="record_voice">Record Voice</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_video">Upload Video</string>
    <string name="upload_audio">Upload Audio</string>
    <string name="dialog_upload_image">Upload_image</string>
    <string name="from_gallery">From Gallery</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="choose_from_gallary">Choose from Gallary</string>
    <string name="cancel">Cancel</string>
    <string name="ongoing_civil_cases">OnGoing Civil Cases</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="criminal_case_details">Details</string>
    <string name="criminal_case_share">Share</string>
    <string name="send">Send</string>
    <string name="details_criminal_case">Details</string>
    <string name="sign_up">Sign Up</string>
    <string name="details">Details</string>
    <string name="cardid">cardId</string>
    <string name="igg_offices">Igg Offices in Uganda</string>

    <string name="Arua"><u></u></string>
    <string name="title_activity_igg_offices">IggOfficesActivity</string>
    <string name="add_igg_offices">Add Offices</string>
    <string name="log_in">Log In</string>
    <string name="admin_log_in">Log In</string>
    <string name="submit_offices">Submit</string>
    <string name="regional_office_name">Regional Office Name</string>
    <string name="office_address">Address</string>
    <string name="office_email_address">Email Address</string>
    <string name="_office_telephone_number">Telephone Number</string>
    <string name="office_box_number">Box Number</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="igg_office_location">IGG Offices</string>
    <string name="title_activity_igg_admin">IggAdminActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Lwembawo fragment</string>
    <string name="title_activity_civil_case_fragment">CivilCaseFragment</string>
    <string name="cases">Cases</string>
    <string name="fax_number">Fax Number</string>
    <string name="title_activity_google_map">GoogleMapActivity</string>

</resources>
