<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ibralwembawogmail.corruptfreeuganda.AddOfficesActivity">

    <EditText
        android:id="@+id/ed_Office_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/regional_office_name"
        android:layout_marginLeft="2sp"
        android:layout_marginTop="15dp"
        />

    <EditText
        android:id="@+id/ed_office_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/office_address"
        android:layout_marginLeft="2sp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/ed_box_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/office_box_number"
        android:layout_marginLeft="2sp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/ed_telephone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/_office_telephone_number"
        android:layout_marginLeft="2sp"
        android:inputType="phone"
        />
    <EditText
        android:id="@+id/ed_office_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/office_email_address"
        android:layout_marginLeft="2sp"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/ed_office_fax_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fax_number"
        android:layout_marginLeft="2sp"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        />
    <Button
        android:id="@+id/submitOfficeDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_offices"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:focusable="false"
        android:onClick="Submit"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        />
</LinearLayout>
