<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_upload_image"
        android:layout_gravity="center"
        android:layout_marginTop="15sp"
        android:textSize="25sp"/>

    <android.support.v7.widget.CardView
        android:id="@+id/cardRecordVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/upload_image"
                android:scaleType="fitStart"
                android:src="@drawable/camera" />

            <TextView
                android:id="@+id/txttakePhoto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Record a Video"
                android:textSize="25sp"
                android:layout_gravity="center"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/cardUpChooseFromGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/upload_image"
                android:cropToPadding="true"
                android:scaleType="fitStart"
                android:src="@drawable/gallary"
                />

            <TextView
                android:id="@+id/txtUploadVideo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/choose_from_gallary"
                android:textSize="25sp"
                android:layout_gravity="center"/>


        </LinearLayout>



    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/btn_Video_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/cancel"
        android:background="@android:color/holo_green_dark"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"/>




</LinearLayout>