<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:cardElevation="5sp"
        android:padding="5dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtCivilCaseTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2sp"
                android:padding="5dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="15sp"
                android:textStyle="bold">

            </TextView>
            <!-- <TextView
                 android:id="@+id/txtCaseCourtNo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="15sp"
                 android:text="TextView"
                 android:padding="5dp"
                 android:layout_marginLeft="2sp">

             </TextView>-->
            <TextView
                android:id="@+id/txtCivilCaseDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2sp"
                android:padding="5dp"
                android:text="TextView"
                android:textSize="15sp">

            </TextView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgCivilShare"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="15sp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_menu_share"
                    android:textSize="15sp"
                    android:padding="5dp"
                    android:focusable="false"
                    android:layout_marginBottom="5sp"
                    tools:text="@string/criminal_case_share"
                    android:contentDescription="@string/criminal_case_share"/>


                <TextView
                    android:id="@+id/txtCivilDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5sp"
                    android:layout_marginLeft="100sp"
                    android:layout_marginTop="15sp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/details_criminal_case"
                    android:textSize="15sp"
                    tools:text="@string/criminal_case_details" />


            </LinearLayout>

            <TextView
                android:id="@+id/txtCardId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="5sp"
                android:layout_marginTop="15sp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/cardid"
                android:textSize="15sp"
                android:visibility="gone"></TextView>


        </LinearLayout>





    </android.support.v7.widget.CardView>
</LinearLayout>