<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ibralwembawogmail.corruptfreeuganda.TextReportingActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personal_information"
        android:layout_marginStart="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginVertical="5sp"
        android:layout_marginTop="5sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ed_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:layout_marginVertical="8sp"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:textAlignment="center" />




            <EditText
                android:id="@+id/ed_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginVertical="10sp"
                android:hint="Phone Number"
                android:inputType="phone"
                android:textAlignment="center" />
           <!-- <EditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:layout_marginVertical="8sp"
                android:hint="Email Address"
                android:inputType="textEmailAddress"
                android:textAlignment="center" />

              <EditText
              android:id="@+id/ed_password"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="8sp"
              android:layout_marginVertical="8sp"
              android:hint="@string/password"
              android:inputType="textPassword"
              android:textAlignment="center" />-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginStart="10sp"
                android:text="@string/report_details" />

            <EditText
                android:id="@+id/ed_report_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:layout_marginVertical="8sp"
                android:hint="Report Title"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/ed_report_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:layout_marginVertical="8sp"
                android:hint="Report Description"
                android:inputType="textMultiLine"
                android:lines="8"
                android:gravity="top" />
            <ImageView
                android:id="@+id/preview_image"
                android:layout_marginLeft="100dp"
                android:layout_width="180dp"
                android:layout_height="180dp"

                android:src="@drawable/user1"/>


            <EditText
                android:id="@+id/ed_report_upload_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:layout_marginVertical="8sp"
                android:hint="@string/upload_image"
                android:textAlignment="center"
                android:focusable="false"

                />
            <EditText
                android:id="@+id/ed_report_upload_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:layout_marginVertical="8sp"
                android:hint="@string/upload_video"
                android:focusable="false"
                android:textAlignment="center" />
            <EditText
                android:id="@+id/ed_report_upload_audio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:layout_marginVertical="8sp"
                android:hint="@string/upload_audio"
                android:focusable="false"
                android:textAlignment="center" />

         <!--   <android.support.design.widget.FloatingActionButton
                android:id="@+id/send_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="@dimen/fab_margin"
                app:fabSize="normal"
                android:onClick="OnSavingCases"
                android:focusable="false"
                app:backgroundTint="@android:color/holo_blue_dark"
                app:srcCompat="@android:drawable/ic_menu_send" />-->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="5dp">
    <Button
        android:id="@+id/btn_saving_criminalCases"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="Send Case Report"
        android:onClick="OnSavingCases"
        android:focusable="false"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"/>
   <!-- <Button
        android:id="@+id/btn_saving_civilCases"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="Save Civil Case"
        android:onClick="OnSavingCivilCases">-->


        android:layout_marginLeft="8dp"
        android:focusable="false"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"/>

</LinearLayout>










        </LinearLayout>



    </ScrollView>









</LinearLayout>
